--- a/AIO_LAYUI/src/main/webapp/views/module/system/user/userAdd.html
+++ b/AIO_LAYUI/src/main/webapp/views/module/system/user/userAdd.html
@@ -83,8 +83,8 @@
 			<button type="button" class="layui-btn" id="selectphoto">上传图片</button>
 			<div class="layui-upload" style="display: flex;justify-content: center;align-items: center;">			  
 			  <div class="layui-upload-list">
-				<img class="layui-upload-img" id="photo" style="vertical-align:middle;">
-				<p id="photoPath" name="photo"></p>
+				<img class="layui-upload-img" id="photo" src="" style="vertical-align:middle;">
+				<p id="photoPath" name="photo"  style="display: none;"></p>
 			  </div>
 			</div>   
 		</div>
