--- a/AIO_LAYUI/src/main/webapp/views/module/system/dict/dictList.html
+++ b/AIO_LAYUI/src/main/webapp/views/module/system/dict/dictList.html
@@ -9,6 +9,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no">
+	<link rel="stylesheet" href="../../../../static/css/formSelects-v4.css" media="all" />
 	<link rel="stylesheet" href="../../../../static/layui/css/layui.css" media="all" />
 	<link rel="stylesheet" href="../../../../static/css/public.css" media="all" />
 </head>
