--- a/AIO_LAYUI/src/main/webapp/views/module/system/user/userList.html
+++ b/AIO_LAYUI/src/main/webapp/views/module/system/user/userList.html
@@ -18,7 +18,9 @@
 	<script type="text/javascript" src="../../../../static/js/ztree/jquery.ztree.core.min.js"></script>
 	<script type="text/javascript" src="../../../../static/js/ztree/jquery.ztree.excheck.js"></script>
 	<script type="text/javascript" src="../../../../static/js/ztree/jquery.ztree.exedit.js"></script>
-	
+<style>
+
+</style>	
 </head>
 <body class="childrenBody">
 	<div class="layui-fluid">
@@ -34,37 +36,40 @@
 				<fieldset id="user_div" class="layui-elem-field">
 					<legend>用户列表</legend>
 					<div class="layui-field-box">
-						<div class="layui-col-md12 layui-col-space1">
-							<div class="layui-inline">		
-								<div class="layui-inline">	
-								<label>用户名</label>
-								<div class="layui-input-inline">
-									<input type="text" class="layui-input username" placeholder="请输入搜索的内容" />
-								</div>
-								<label>姓名</label>
-								<div class="layui-input-inline">
-								<input type="text" class="layui-input name" placeholder="请输入搜索的内容" />
-								</div>
-								
-							
-							
+					<form class="layui-form">
+						<div class="layui-inline" style="margin-left: 15px">
+						<label>登录名：</label>
+						<div class="layui-input-inline">
+							<input type="text"   placeholder="请输入登录名" class="layui-input username">
+						</div>
+						</div>
+						<div class="layui-inline" style="margin-left: 15px">
+						<label>姓名：</label>
+						<div class="layui-input-inline">
+							<input type="text"  placeholder="请输入姓名" class="layui-input name">
+						</div>
+						</div>
+						<div class="layui-inline" style="margin-left: 15px">
+						<label>用户类型：</label>
+						<div class="layui-input-inline">
+							<select id="type" >
+								<option value=""></option>
+							</select>
+						</div>
 						</div>
 						<div class="layui-inline">
-							<a class="layui-btn search_btn" data-type="reload">搜索</a>
+							<a class="layui-btn" lay-submit="" lay-filter="searchForm" class="layui-btn search_btn" >查询</a>
 						</div>
+					</form>
 					</div>
 					<div layui-inline class="layui-but-per">
 						<div class="layui-btn-group" id="but_per">
 						</div>
 					</div>
 					<table id="userList" lay-filter="userList"></table>
-		</div>  
-		</fieldset>
+			</div>  
+				</fieldset>
 	</div>
-<script type="text/html" id="userListBar">
-		<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-		<a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del">删除</a>
-</script>
 </body>
 <script type="text/javascript" src="../../../../static/layui/layui.js"></script>
 	<script type="text/javascript" src="../../../../static/js/modules/system/user/userList.js"></script>
